--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,113 +1,151 @@
-.main {
+.main{}
+.navContainer{
+  height: 80px;
+  background-color: var(--bgSoft);
+}
+.nav{
+display: flex;
+justify-content: space-between;
+align-items: center;
+padding: 10px 2.3rem;
+height: 100%;
+}
+.logo{}
+.dashboardLinkContainer a{
+  cursor: pointer;
+  outline: 0;
+  display: inline-block;
+  font-weight: 400;
+  line-height: 1.5;
+  text-align: center;
+  color: var(--bgSoft);
+  font-weight:600;
+  letter-spacing: .05rem;
+  background: linear-gradient(90deg, hsla(217, 100%, 50%, 1) 0%, hsla(186, 100%, 69%, 1) 100%);
+  /* background-color: transparent; */
+  border: 1px solid transparent;
+  padding: 4px 10px;
+  font-size: 1.1rem;
+  border-radius: .25rem;
+  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  border-color: #0d6efd;
+  
+
+}
+.dashboardLinkContainer a:hover {
+  color: #636363;
+}
+.mainTitleContainer{
+  position: relative;
+  width: 100%;
+  height: 600px;
+  display: flex;
+  justify-content: center;
+  
+}
+.mainTitleContainer::before {
+  scroll-behavior: smooth;
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: url('/homebg.jpg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  filter: blur(4px) brightness(24%);
+  background-attachment: fixed;
+}
+.mainTitle{
+  width: 60%;
+  position: relative;
+  z-index: 1;
+ margin-top: 80px;
+}
+.mainTitle h1 {
+  background-image: linear-gradient(to left bottom,hsl(195, 60%, 58%),hsl(240, 69%, 61%));
+  background-clip: text;
+  text-align: center;
+  font-size: 88px;
+  -webkit-text-fill-color: transparent;
+}
+.mainTitle p {
+  font-size: 1.4rem;
+  color: #999999;
+  text-align: justify;
+}
+.boxContainer {
+  width: 100%;
+  background-color: var(--bgSoft);
+  display: flex;
+  justify-content: center;
+  padding: 30px 10px;
+
+}
+.boxPot {
+  width: 70%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  gap: 20px;
+
+
+}
+.box {
+  width: 27%;
+  height: 230px;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  background-color: var(--bg);
+  padding: 20px 30px;
+  transition: all .3s ease-in-out;
+
+}
+.box div:first-child  {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 40px;
+}
+.box h4 {
+  font-size: 22px;
+  font-weight: 400;
+  text-align: center;
+}
+.box:hover {
+  background-image: linear-gradient(to left bottom,hsl(195, 45%, 51%),hsl(240, 53%, 54%));
+cursor: pointer;
+color: var(--bgSoft);
+}
+.box p {
+  text-align: justify;
+  margin-top: 10px;
+}
+.collapsibleContainer{
+  width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
+  margin-top: 30px;
+  margin-bottom: 10px;
+  background-color: var(--bg);
 }
-
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
-}
-
-.description a {
+.footerContainer {
+  height: 70px;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
-  gap: 0.5rem;
+  background-color: var(--bgFooter);
+  color: var(--textSoft);
 }
-
-.description p {
-  position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
+.footerContainer strong {
+  font-size: large;
+  font-weight: 400;
+  padding: 0 5px;
+  color: #55b4d4 ;
 }
-
-.code {
-  font-weight: 700;
-  font-family: var(--font-mono);
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  width: var(--max-width);
-  max-width: 100%;
-}
-
-.card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
-}
-
-.card span {
-  display: inline-block;
-  transition: transform 200ms;
-}
-
-.card h2 {
-  font-weight: 600;
-  margin-bottom: 0.7rem;
-}
-
-.card p {
-  margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  max-width: 30ch;
-}
-
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  padding: 4rem 0;
-}
-
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
-}
-
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
-}
-
-.center::before,
-.center::after {
-  content: '';
-  left: 50%;
-  position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
-}
-
-.logo {
-  position: relative;
-}
-/* Enable hover only on non-touch devices */
+/* 
 @media (hover: hover) and (pointer: fine) {
   .card:hover {
     background: rgba(var(--card-rgb), 0.1);
@@ -125,7 +163,6 @@
   }
 }
 
-/* Mobile */
 @media (max-width: 700px) {
   .content {
     padding: 4rem;
@@ -202,7 +239,6 @@
   }
 }
 
-/* Tablet and Smaller Desktop */
 @media (min-width: 701px) and (max-width: 1120px) {
   .grid {
     grid-template-columns: repeat(2, 50%);
@@ -226,4 +262,4 @@
   to {
     transform: rotate(0deg);
   }
-}
+} */
